# 002-Test-Project

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
new_project/: __init__.py  dataset.py  features.py  plots.py
new_project/modeling/: predict.py  train.py
src/: data_prerp.py
