[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "new_project"
version = "0.0.1"
description = "Project Structure Template"
authors = [
  { name = "Felipe Checa" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.13.3"


[tool.ruff]
line-length = 99
src = ["new_project"]
include = ["pyproject.toml", "new_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["new_project"]
force-sort-within-sections = true

